# demo-5

./: .env  .replit  README.md  add_mikrotik_device.sh  app.py  check-env.js  check-monitoring-info.mjs  configure-nginx.sh  connect_mikrotik.md  install.sh  mikrotik-api.cjs  mikrotik-api.js  mikrotik-controller-install.sh  mikrotik_monitor.py  package-lock.json  package.json  pyproject.toml  quick-bandwidth.mjs  reinstall.sh  reinstall_replit.sh  run_server.sh  server.cjs  server.js  server.mjs  start_server.sh  test-bandwidth.mjs  test-connection.js  test-connection.mjs  test-mikrotik.sh  test-specific-info.mjs  test-wireless-vpn.mjs  troubleshooting.md  workflows.json
.replit-files/: workflows.json
api/: notification_routes.mjs
attached_assets/: Pasted-huannv-huannv-GitDemoConnect-mikrotik-controller-add-mikrotik-Th-m-thi-t-b-MikroTik-v-o-h-1742924108715.txt  Pasted-huannv-huannv-GitDemoConnect-mikrotik-controller-sudo-journalctl-u-mikrotik-controller-tail-n-1742923839942.txt  Pasted-huannv-huannv-GitDemoConnect-mikrotik-controller-sudo-nano-etc-systemd-system-mikrotik-controlle-1742924368061.txt  Pasted-uannv-huannv-GitDemoConnect-cd-ng-d-n-n-mikrotik-controller-git-pull-npm-install-npm-run-1742923068391.txt
client/: index.html
config/: alert_monitor_config.json  notification_config.json
monitoring/: __init__.py  alert_monitor.py  check_bandwidth_usage.py  mikrotik_data_collector.mjs
notifications/: __init__.py  email_service.py  notification_service.py  send_message.py  sms_service.py
public/: capsman.html  capsman.js  index.html  main.js  mikrotik.css  (+5 more)
(+43 files in other folders)
