[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "jinja2>=3.1.6",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
]
