[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "routeros-api>=0.21.0",
    "sendgrid>=6.11.0",
    "streamlit>=1.44.0",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
]
